tests/sksl/errors/ReservedNameEnum.glsl
### Compilation failed:

error: 1: 'enum' is a reserved word
int enum;
    ^^^^
1 error
